Fixed grammar, practiced shortcut keys

--- a/0-example.html
+++ b/0-example.html
@@ -1,1 +1,1 @@
-Their are many people with poor grammer. Remember that conetn is King.
+There are many people with poor grammar. Remember that cotton is king. Morgan Moriarty has one love and that is College Football. Morgan Moriarty has one love and that is College Football.Morgan Moriarty has one love and that is College Football.Morgan Moriarty has one love and that is College Football.
