4-css-typography exercise 4 submission

--- a/4-css-typography.html
+++ b/4-css-typography.html
@@ -25,6 +25,7 @@
 
             <h1> Practicing CSS Typography</h1>
             <h2>I am working on Media Queries</h2>
+            <p>In this excercise I am putting in paragraphs</p>
 	</article>
         
     <footer>
